# Alpha_Engine

./: .gitignore  README.md
Alpha Engine/: CMakeLists.txt  MethaneApplications.cmake  MethaneShaders.cmake  MethaneUtils.cmake
Alpha Engine/include/Methane/: Memory.hpp
Alpha Engine/include/Methane/Graphics/: Buffer.h  MeshBuffers.hpp  ProgramBindings.h  Resource.h
Alpha Engine/lib/: MethaneDataAnimation.lib  MethaneDataEvents.lib  MethaneDataPrimitives.lib  MethaneDataProvider.lib  MethaneDataTypes.lib  MethaneGraphicsApp.lib  MethaneGraphicsCamera.lib  MethaneGraphicsExtensions.lib  MethaneGraphicsPrimitives.lib  MethaneGraphicsTypes.lib  MethaneInstrumentation.lib  MethaneKit.lib  MethanePlatformApp.lib  MethanePlatformAppView.lib  MethanePlatformInput.lib  MethanePlatformUtils.lib  MethanePrimitives.lib  MethaneUserInterfaceApp.lib  MethaneUserInterfaceTypes.lib  MethaneUserInterfaceTypography.lib  MethaneUserInterfaceWidgets.lib  freetype.lib
Alpha Engine/lib/cmake/Taskflow/: TaskflowConfigVersion.cmake  TaskflowTargets.cmake
engine/: CMakeLists.txt
engine/include/: AlphaObject.h  Asset.h  BaseEntity.h  BaseFigureEntity.h  BaseLogicEntity.h  BaseModelEntity.h  Figure.h  Game.h  Resource.h  Soundscape.h  Util.h
engine/src/: AlphaObject.cpp  BaseEntity.cpp  BaseModelEntity.cpp  Game.cpp  ModelEntity.cpp
experimental/: Experimental.dev  Experimental.layout  Graphics.h  Input.cpp  Input.h  Makefile.win  Object3D.h  Renderer.cpp  Renderer.h  Scene.h  ae_capi.h  ae_std.h  main.cpp
experimental/AlphaEngine/: CMakeLists.txt
experimental/AlphaEngine/src/: CMakeLists.txt  Input.h  ae_math.h  ae_std.h  main.cpp
experimental/AlphaEngine/src/c_api/: Input.h
experimental/c_api/: Input.h
magnum/: CMakeLists.txt  README.md
magnum/alphagame/: CMakeLists.txt
magnum/alphagame/src/: main.cpp
magnum/base/: CMakeLists.txt
magnum/base/include/: Player.h
magnum/base/src/: Player.cpp
magnum/engine/: CMakeLists.txt
magnum/engine/include/: Map.h  Renderer.h
magnum/engine/src/: Map.cpp  Renderer.cpp
magnum/src/: CMakeLists.txt  MyApplication.cpp
samples/: CMakeLists.txt
samples/src/: Main.cpp
schemas/: Alpha_Engine.drawio
urho/: CMakeLists.txt  main.cpp
